--- a/Persistense.BlobStorage.MinIO/Persistense.BlobStorage.MinIO.csproj
+++ b/Persistense.BlobStorage.MinIO/Persistense.BlobStorage.MinIO.csproj
@@ -4,10 +4,12 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Infrastructure.BlobStorage</RootNamespace>
     </PropertyGroup>
 
     <ItemGroup>
-      <PackageReference Include="CSharpFunctionalExtensions" Version="2.42.5" />
+      <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
 </Project>
