--- a/Persistense.EF/Persistense.EF.csproj
+++ b/Persistense.EF/Persistense.EF.csproj
@@ -4,10 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <RootNamespace>Persistense</RootNamespace>
     </PropertyGroup>
-
-    <ItemGroup>
-      <PackageReference Include="CSharpFunctionalExtensions" Version="2.42.5" />
-    </ItemGroup>
 
 </Project>
