--- a/Persistense.EF/Persistense.EF.csproj
+++ b/Persistense.EF/Persistense.EF.csproj
@@ -7,4 +7,13 @@
         <RootNamespace>Persistense</RootNamespace>
     </PropertyGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.6" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Application\Application.csproj" />
+      <ProjectReference Include="..\Domain\Domain.csproj" />
+    </ItemGroup>
+
 </Project>
