--- a/Persistense.BlobStorage.MinIO/Persistense.BlobStorage.MinIO.csproj
+++ b/Persistense.BlobStorage.MinIO/Persistense.BlobStorage.MinIO.csproj
@@ -12,4 +12,8 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Minio" Version="6.0.3" />
+    </ItemGroup>
+
 </Project>
