--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,10 +1,27 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
+    <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
-    <RootNamespace>SignalRTest</RootNamespace>
+    <RootNamespace>Chat.WebAPI</RootNamespace>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <LangVersion>10</LangVersion>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Application\Application.csproj" />
+    <ProjectReference Include="..\Domain\Domain.csproj" />
+    <ProjectReference Include="..\Infrastructure.Auth\Infrastructure.Auth.csproj" />
+    <ProjectReference Include="..\Persistense.BlobStorage.MinIO\Persistense.BlobStorage.MinIO.csproj" />
+    <ProjectReference Include="..\Persistense.Cache.Redis\Persistense.Cache.Redis.csproj" />
+    <ProjectReference Include="..\Persistense.EF\Persistense.EF.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="..\.dockerignore">
+      <Link>.dockerignore</Link>
+    </Content>
+  </ItemGroup>
 
 </Project>
